--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ dist-ssr
 /.vs/Eurkea/FileContentIndex/ef5ef47a-85e2-49fc-8fb8-d513c94e52a2.vsidx
 /.vs/Eurkea/FileContentIndex/054f0747-97a6-4c86-8b30-f1dac01dd200.vsidx
 /.vs
+/.vs/slnx.sqlite
