--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-slick": "^0.30.2",
     "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
